<resources>
    <string name="app_name">Radio17</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Ustawienia</string>
    <string name="title_activity_player">Radio17</string>
    <string name="loading">Wczytuję dane</string>
    <string name="no_internet_connection">Brak połączenia z siecią</string>
    <string name="title_not_available">Tytuł utworu nie jest dostępny</string>

    <string name="player">Odtwarzacz</string>
    <string name="recorder">Nagrywarka</string>
    <string name="timetable">Ramówka</string>
    <string name="music">Muzyka</string>
    <string name="whatsnewinmusic">Nowości Muzyczne</string>
    <string name="musicblog">Blog Muzyczny</string>

    <string name="information">Informacje</string>
    <string name="news">Aktualnosci</string>
    <string name="podcast">Podcasty</string>
    <string name="parties">Imprezy</string>
    <string name="title_activity_recorder">RecorderActivity</string>
    <string name="title_activity_article_list_view">ArticleListViewActivity</string>

    <string name="radio17_url">http://radio17.pl/</string>
    <string name="player_url">http://37.187.247.31:8000/;</string>


    <string-array name="station_names">
        <item>Kanał Główny</item>
    </string-array>
    <string name="kanal_glowny">Kanał Główny</string>

    <string name="title_activity_image_view">ImageViewActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_timetable">TimetableActivity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="no_internet_conn_notification">No Internet connection</string>
    <string name="play_button">PLAY</string>
    <string name="title_activity_main">MainActivity</string>
</resources>
