<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_player"
            android:title="@string/player" />

        <item
            android:id="@+id/nav_timetable"
            android:title="@string/timetable" />

    </group>

    <item
        android:id="@+id/nav_blog"
        android:title="@string/musicblog" />

    <item android:title="@string/news">
        <menu>
            <item
                android:id="@+id/nav_news"
                android:title="@string/news" />
            <item
                android:id="@+id/nav_information"
                android:title="@string/information" />
            <item
                android:id="@+id/nav_podcast"
                android:title="@string/podcast" />
            <item
                android:id="@+id/nav_parties"
                android:title="@string/parties" />

        </menu>
    </item>

</menu>
